infra/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Cette règle magique retire le préfixe /api/ et garde le reste ($1$2)
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
  name: flotte-ingress
  namespace: flotte-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: flotte.local
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /(grafana)(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: graphql-gateway-service
                port:
                  number: 4000
            path: /(graphql)(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: vehicle-service
                port:
                  number: 8080
            path: /api/(vehicles)(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: driver-service
                port:
                  number: 8080
            path: /api/(drivers)(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: maintenance-service
                port:
                  number: 8080
            path: /api/(maintenance)(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: event-service
                port:
                  number: 8080
            path: /api/(events)(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: location-service
                port:
                  number: 3000
            path: /api/(location)(.*)
            pathType: ImplementationSpecific
